--- a/css/index.css
+++ b/css/index.css
@@ -72,7 +72,7 @@ h1 em {
   text-align: center;
   font-size: 30px;
   font-weight: 300;
-  color: rgb(131, 4, 4);
+  color: #dada1e;
   letter-spacing: 1px;
   text-transform: uppercase;
   font-weight: bolder;
@@ -87,8 +87,8 @@ h1 em {
 .seven h1:before {
   content: " ";
   display: block;
-  border-bottom: 1px solid #c50000;
-  border-top: 1px solid #c50000;
+  border-bottom: 1px solid #d1c627;;
+  border-top: 1px solid #d1c627;
   height: 5px;
   background-color: #f8f8f8;
 }
@@ -103,9 +103,8 @@ a {
   text-decoration: none;
 }
 
-
 p {
-  color: #000000;
+  color:   #656d78;;;
   font-family: "Roboto", sans-serif;
   text-align: center;
 }
@@ -114,10 +113,9 @@ p {
   box-shadow: 0 0 10px 0 rgba(182, 158, 218, 0.863);
   padding-bottom: 10px;
   margin-bottom: 15px;
-  font-family: "Quicksand", sans-serif;
+  /* font-family: "Quicksand", sans-serif; */
   background-color: #dfdfe6d7;
 }
-
 
 .navbar {
   display: flex;
@@ -214,21 +212,35 @@ p {
 }
 
 /*quienes somos*/
- .quienessomosInfo p{
-  text-align:justify;
- }
+.quienessomosInfo p {
+  text-align: justify;
+  font-family: "Poppins", sans-serif;
+  font-weight: 500;
+  font-size:17px;
+  line-height: 1.4;
+  color: #656d78;
+  
+  margin: 2rem auto;
+}
 
- .centrar-texto {
-   margin-top: 1px;
- }
+.centrar-texto {
+  margin-top: 1px;
+}
 
 /* Mision */
-.mision {
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  gap: 3rem;
-  padding: 10px;
-  margin: 10px;
+
+
+@media (min-width: 768px) {
+  .mision {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 3rem;
+    padding: 10px;
+    margin: 10px;
+
+    
+  }
+
 }
 
 .misionimg img {
@@ -243,26 +255,34 @@ p {
 }
 
 .misiondescription {
-  color: #5e0101;
+  color: #dada1e;
   font-family: "Quicksand", sans-serif;
+  align-items: baseline;
 }
 
+
+
+.misiondescription p{
+
+  color: #656d78;;
+}
 
 /* Materiales */
 .materialdescripcion p {
   text-align: justify;
   margin: 20px auto;
   font-family: "Roboto", sans-serif;
-  color: #000000;
+    color: #656d78;;
 }
 .materialdescripcion li {
   list-style: circle;
   margin: auto 2rem;
-  color: #000000;
+  font-weight: bold;
+  color: rgb(73, 71, 71);
 }
 
-
 @media (max-width: 768px) {
+
 }
 .material h5 {
   margin-top: 1rem;
@@ -278,9 +298,8 @@ p {
   margin: 0 auto;
   object-fit: cover;
   border-radius: 8px;
-
 }
-.float{
+.float {
   background-color: #e45050;
   border-radius: 21px;
 }
@@ -300,11 +319,16 @@ p {
     text-align: justify;
   }
 }
+
+
+
 .material {
   margin: 1.5rem;
   padding: 20px;
   border-bottom: #bbbbbb8c solid 1px;
 }
+
+
 
 /* Valores */
 
@@ -313,21 +337,26 @@ p {
   padding: 25px;
 }
 
-.somos{
+.somos {
   padding-top: 0px;
 }
 
 .valores h5 {
   color: #000000;
 }
+.valores p {
+  margin: 1rem;
+  color: #656d78;
+}
 
 .valores h2 {
   text-align: center;
   margin: 20px auto;
-  color: #5e0101;
+  color: #dada1e;
+  margin-top: 3rem;
 }
 
-.imgValor{
+.imgValor {
   background-color: #ffffff9a;
   padding: 5px;
   border: none;
@@ -335,37 +364,21 @@ p {
   box-shadow: 0 0 2px 0 rgba(92, 53, 151, 0.863);
 }
 
-.imgValor2{
+.imgValor2 {
   border-radius: 20px;
   box-shadow: 0 0 8px 0 rgba(92, 53, 151, 0.863);
   margin: 40px;
 }
 
-.imgAsesoria{
-  margin-top: 20px;
-  margin-bottom: 20px;
-  border: none;
-  border-radius: 10px;
-  box-shadow: 0 0 8px 0 rgba(92, 53, 151, 0.863);
-}
 
-.asesoriaimg p{
-  margin: 25px;
-}
 
-.imgAsesoria:hover{
+.materialimg:hover {
   -webkit-transform: scale(1.03);
   transform: scale(1.03);
   overflow: hidden;
 }
 
-.materialimg:hover{
-  -webkit-transform: scale(1.03);
-  transform: scale(1.03);
-  overflow: hidden;
-}
-
-.v-icono:hover{
+.v-icono:hover {
   -webkit-transform: scale(1.07);
   transform: scale(1.07);
   overflow: hidden;
@@ -380,7 +393,7 @@ p {
 
 .v-icono {
   text-align: center;
-  line-height: 2;
+  line-height: 1.2;
 }
 
 /* Servicios */
@@ -391,22 +404,24 @@ p {
 }
 .servicio {
   display: flex;
-  flex-direction:column;
+  flex-direction: column;
   align-content: center;
   margin: 2rem auto;
   border-bottom: solid 4px rgb(155, 150, 150);
 }
 
-.imgWrapper4{
+.imgWrapper4 {
   font-size: 0;
   text-align: center;
 }
-.imgWrapper4 .imgResponsiva{
+.imgWrapper4 .imgResponsiva {
   display: inline-block;
   font-size: inherit;
   padding: 5px;
 }
-.imgWrapper4 .imgResponsiva {width: 24%;}
+.imgWrapper4 .imgResponsiva {
+  width: 24%;
+}
 
 .imgResponsiva img {
   height: auto;
@@ -421,12 +436,14 @@ p {
   font-weight: bold;
   font-size: 1.5rem;
   text-transform: uppercase;
-  color: rgb(221, 24, 24);
+  color: rgb(0, 0, 0);
 }
 .servicio p {
-  text-align: center;
+  text-align: justify;
   margin: 1rem auto;
-  color: #000000;
+  color: #656d78;
+  font-size: 17px;
+
 }
 .servicio img {
   margin: 2px;
@@ -438,10 +455,12 @@ p {
 /*Responsive*/
 
 @media (max-width: 767px) {
-  .imgWrapper4 .imgResponsiva {width: 45%;}
+  .imgWrapper4 .imgResponsiva {
+    width: 45%;
+  }
 }
 
-.servicio img:hover{
+.servicio img:hover {
   -webkit-transform: scale(1.03);
   transform: scale(1.03);
   overflow: hidden;
@@ -450,18 +469,21 @@ p {
   list-style: circle;
   align-items: flex-end;
   line-height: 2;
-  color: rgb(0, 0, 0);
+  font-weight: bold;
+  color: rgb(73, 71, 71);
 }
 
-.servicios ul{
+.servicios ul {
   padding-left: 40px;
   padding-bottom: 10px;
+
 }
 
 /* Asesoria */
 .asesoriaimg img {
   width: 100%;
-  height: 100vh;
+  height: 80vh;
+  
 }
 .asesoria h3 {
   margin: 1rem auto;
@@ -472,6 +494,25 @@ p {
   font-size: 1.5rem;
   text-transform: uppercase;
   color: rgb(82, 190, 91);
+}
+
+.imgAsesoria {
+  margin-top: 20px;
+  margin-bottom: 20px;
+  border: none;
+  border-radius: 10px;
+  box-shadow: 0 0 8px 0 rgba(92, 53, 151, 0.863);
+}
+
+.asesoriaimg p {
+  margin: 25px;
+  text-align: justify;
+}
+
+.imgAsesoria:hover {
+  -webkit-transform: scale(1.03);
+  transform: scale(1.03);
+  overflow: hidden;
 }
 
 /* Contacto */
@@ -578,7 +619,6 @@ textarea {
 
 /* footer */
 
-
 .row {
   display: flex;
   flex-wrap: wrap;
@@ -595,7 +635,7 @@ li {
   background-color: #24262b;
   padding: 20px 0 10px 0;
 }
-footer p{
+footer p {
   color: #ffffff;
 }
 
@@ -687,7 +727,6 @@ footer p{
   border: none;
   cursor: pointer;
   background-color: rgba(255, 0, 0, 0);
-  
 }
 
 /* The container <div> - needed to position the dropdown content */
@@ -706,7 +745,6 @@ footer p{
   z-index: 1;
   border-bottom-right-radius: 20px;
   border-bottom-left-radius: 20px;
-
 }
 
 /* Links inside the dropdown */
@@ -719,12 +757,12 @@ footer p{
   border-bottom-right-radius: 20px;
   border-bottom-left-radius: 20px;
   border-bottom: #0000002c solid 1px;
-
 }
 
 /* Change color of dropdown links on hover */
 .dropdown-content a:hover {
   background-color: #d0ced675;
+  color: red;
 }
 
 /* Show the dropdown menu on hover */
